# Game-Dev-Harness-BYOK

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ADVANCED_MEMORY.md  AGENT_SWARMS.md  ARCHITECTURE.md  AUDIT_READINESS_REPORT.md  DESKTOP_APP.md  ENGINE_PROFILES.md  LONG_HORIZON_DEVELOPMENT.md  PACKAGING_WINDOWS_APP.md  WINDOWS_SETUP.md
examples/prompts/: gba_rpg.md  unity_vertical_slice.md
game_dev_harness/: __init__.py  cli.py  desktop_app.py  desktop_dashboard.py  long_horizon.py  long_horizon_cli.py  memory.py  packager.py
packaging/: create_shortcuts.ps1  dashboard_main.py  desktop_main.py  windows_installer.iss
scripts/: build_desktop_app.ps1  build_installer.ps1  run.bat  run_dashboard.bat  run_desktop_app.bat  run_long_horizon.bat  setup_windows.ps1
tests/: test_core_smoke.py
