[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "game-dev-harness-byok"
version = "0.4.0"
description = "A Windows 11 BYOK multi-agent harness for long-form game and app development."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Xander Larkins"}]
dependencies = [
  "customtkinter>=5.2.2",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "rich>=13.7.1",
  "typer>=0.12.3",
  "PyYAML>=6.0.1"
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "ruff>=0.5.0"]
desktop-build = ["pyinstaller>=6.10.0", "pillow>=10.4.0"]

[project.scripts]
gdh = "game_dev_harness.cli:app"
gdh-desktop = "game_dev_harness.desktop_app:main"
gdh-dashboard = "game_dev_harness.desktop_dashboard:main"
gdh-long = "game_dev_harness.long_horizon_cli:app"
gdh-package = "game_dev_harness.packager:app"

[tool.setuptools.packages.find]
include = ["game_dev_harness*"]

[tool.ruff]
line-length = 100
target-version = "py311"
